# packages/cactus-core-api/src/main/typescript/public-api.ts
@@ -53,4 +53,7 @@ export { ICrpcSvcRegistration } from "./plugin/crpc-service/i-plugin-crpc-servic
 export { IPluginCrpcService } from "./plugin/crpc-service/i-plugin-crpc-service";
 export { isIPluginCrpcService } from "./plugin/crpc-service/i-plugin-crpc-service";
 
-export { IPluginMsgV1 } from "./plugin/i-plugin-msg-v1";
+export { IP2pMsgV1, P2pMsgVersion } from "./plugin/i-plugin-msg-v1";
+
+export { P2pMsgService } from "./generated/crpc/p2p-msg-svc_connect";
+export { P2pMsgV1 } from "./generated/crpc/p2p-msg-svc_pb";
